--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.16",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
     "@types/recompose": "^0.30.7",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
@@ -63,6 +62,8 @@
   ],
   "devDependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
     "eslint-plugin-flowtype": "3.13.0",
     "gulp": "4.0.2",
